fix(google): remove code that breaks links on mobile

--- a/styles/google/catppuccin.user.css
+++ b/styles/google/catppuccin.user.css
@@ -2077,9 +2077,6 @@
     .act-switch-area {
       background-color: @base !important;
     }
-    .q8U8x > div:nth-child(1) {
-      background-color: @base !important;
-    }
     .EwDHG,
     .vNdLpe,
     .vNdLpe:visited {
